Completed the following pages.

--- a/tutorial/bg_info/tutorial_julesrose/jr_links.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_links.html
@@ -59,18 +59,64 @@
         </nav>
         <div class="container theme-showcase" role="main">
             <div class="jumbotron">
+                </br>
+                </br>
                 <h2>JULES Links</h2>
-                <br>
+                <a href="https://code.metoffice.gov.uk/trac/jules">JULES on MOSRS</a>
+                </br>
+                <a href="https://jules.jchmr.org/">JULES on jchmr</a>
+                </br>
+                <a href="https://jules.jchmr.org/software-and-documentation">Requesting access to the JULES code</a>
+                </br>
+                <a href="https://http://jules-lsm.github.io/vn4.7/">JULES vn4.7 User Guide</a> to see a different version of the user guide change the vn#.# to your desired version number.
+                </br>
+                <a href="https://code.metoffice.gov.uk/trac/jules/wiki/WorkingPractices">JULES Working Practices</a>
+                </br>
+                <a href="https://code.metoffice.gov.uk/trac/jules/wiki/JULESTipOfDay">JULES Tip Of the Day (JTOD)</a>
+                </br>
+                <a href="https://code.metoffice.gov.uk/trac/jules/query?status=approved&status=assigned&status=code_review&status=committed&status=in_progress&status=new&status=sci%2Ftech_review&milestone=JULES+v4.8+release&col=id&col=summary&col=status&col=type&col=priority&col=milestone&col=time&order=priority">Custom Query Milestone is JULES v4.8 release</a> change the Filters as appropraite.
+                </br>
+                </br>
+                <h2>VM (JULES) Links</h2>
+                <a href="https://code.metoffice.gov.uk/trac/jules/wiki/JULESVirtualMachine">VM (JULES)</a> note you need to <code>sudo install-jules-*</code> all three of the scripts.
+                </br>
+                <a href="https://github.com/metomi/metomi-vms#metomi-vms">metomi-vms</a>
+ </br>
+                <a href="https://github.com/metomi/metomi-vms/tree/master/usr/local/bin">Location of the install-jules-* scripts on GitHub</a>
+                </br>
+                </br>
+                <h2>Rose/Cylc Links</h2>
+                <a href="http://metomi.github.io/rose/doc/rose.html">Rose Documentation</a>
+                </br>
+               <a href="https://code.metoffice.gov.uk/trac/roses-u/">Rosie Repository</a> Click on the <code>Browse Source</code> button. Use to looks at JULES-Rose suites, e.g. <a href="https://code.metoffice.gov.uk/trac/roses-u/browser/a/i/8/2/8">u-ai828</a>
+                </br>
+                <a href="https://cylc.github.io/cylc/documentation.html">Cylc Documentation</a>
+                </br>
+                <a href="https://cylc.github.io/cylc/html/single/cug-html.html">Cylc User Guide Single Page</a>
+                </br>
+                </br>
+
+                <h2>Subversion/FCM/Trac Links</h2>
                 <a href="http://svnbook.red-bean.com/en/1.8/">Subversion Book</a>
-                <br>
-                <a href="http://www-nwp/~fcm/fcm-doc/fcm/user_guide/system_admin.html#trac">Trac</a>
-                <br>
-                <a href="http://www-nwp/~fcm/fcm-doc/fcm-2015.11.0/user_guide/getting_started.html#tutorial_create-ticket">Creating a ticket</a>
-                <br>
+                </br>
+                <a href="http://jules-lsm.github.io/tutorial/bg_info/tutorial/index.html">FCM tutorial</a>
+                </br>
+                <a href="https://code.metoffice.gov.uk/trac/home">Met Office Science Repository Service (MOSRS)</a>
+                </br>
+                <a href="https://code.metoffice.gov.uk/trac/jules/wiki/JULESKeywords">FCM Keywords for JULES</a>
+                </br>
+                <a href="https://trac.edgewall.org/">Trac</a>
+                </br>
+                <a href="https://en.wikipedia.org/wiki/Trac">About Trac</a>
+                </br>
+                <a href="https://code.metoffice.gov.uk/trac/jules/newticket">Creating a ticket</a>
+                </br>
+                <a href="https://code.metoffice.gov.uk/trac/jules/wiki/WorkingPractices#Creatinganewticket">Advice on Creating a Ticket</a>
+                </br>
                 <a href="http://trac.edgewall.org/wiki/TracIni">The Trac Configuration File</a>
-                <br>
+                </br>
                 <a href="http://trac.edgewall.org/wiki/TracTickets">The Trac Ticket System</a>
-                <br>
+                </br>
                 <a href="http://furius.ca/xxdiff/doc/xxdiff-doc.html">xxdiff documentation: http://furius.ca/xxdiff/doc/xxdiff-doc.html</a>
                 <br>
             </div>
