--- a/tutorial/bg_info/tutorial_julesrose/index.html
+++ b/tutorial/bg_info/tutorial_julesrose/index.html
@@ -79,7 +79,7 @@
                                 <li><a href="jr_glossary.html">Glossary List</a></li>
                                 <li><a href="jr_links.html">Links</a></li>
                                 <li><a href="jr_mqrg.html">My Quick Reference Guide</a></li>
-                            </ul>
+                                <li><a href="jr_structures.html">JULES structures</a></li>                            </ul>
 
 
         </div>
