--- a/tutorial/bg_info/tutorial_julesrose/jr_glossary.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_glossary.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <meta name="description" content="JULES Rose Tutorial">
+        <meta name="description" content="JULES-Rose Tutorial">
         <meta name="author" content="JULES System Manager">
         <link rel="icon" href="jules_logo.png">
-        <title>JULES Rose Glossary List</title>
+        <title>JULES-Rose Glossary List</title>
         <!-- Bootstrap core CSS -->
         <link href="../etc/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- Bootstrap theme -->
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">JULES Rose Glossary List</a>
+                    <a class="navbar-brand" href="#">JULES-Rose Glossary List</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -59,12 +59,64 @@
         </nav>
         <div class="container theme-showcase" role="main">
             <div class="jumbotron">
+                <h2>Glossary list of JULES words</h2>
+                </br>
+                </br>
+                <ul>
+                <li>Ancillaries - datasets of fields at the resolution of the model, such as orography, soil mositure, etc.</li>
+                <li>Benchmarking - A way of evaluating the and comparing changes.</li>
+                <li>Configuration - The scientific setting chosen for the model to use.</li>
+                <li>Driving Data - The data source that drives the model, for example: GSWP2 or Loobos or WFDTI or CHESS etc.</li>
+                <li>Evaluation Tools - These are the different tools that are used by the community to evaluate the model at a given version, configuration with defined ancils and driving data.</li>
+                <li>KGO - Known Good Output, this is complier specific, it is used in the rose stem testing to prove that changes are not breaking existing code or are only improving the output in an agreed acceptable way, i.e. it is intended.</li> 
+                <li>Version - The code at a defined release date, i.e. vn4.7 was released 2016-10-29 at revision number 5320.</li>
+
+                
+                </ul>
+                </br>
+                </br>
+                <h2>Glossary list of Rose commands</h2>
+                </br>
+                <strong>To find out more about each command use the help, for example:
+                <code>rose &lt;COMMAND&gt; --help</code> </strong>
+                </br>
+                </br>
+                <ul>
+                <li>rose edit</li>
+                <li>rose sgc</li>
+                <li>rose slv</li>
+                <li>rose stem</li>
+                <li>rose suite-run</li>
+                <li>rose suite-shutdown</li>
+                <li>rosie checkout</li>
+                <li>rosie copy</li>
+                <li>rosie delete</li>
+                <li>rosie go</li>
+
+                </ul>
+                </br>               
+                </br>
+                <h2>Glossary list of Cylc commands</h2>
+                </br>
+                <strong>To find out more about each command use the help, for example:
+                <code>cylc &lt;COMMAND&gt; --help</code> </strong>
+                </br>
+                </br>
+                <ul>
+                <li>cylc gscan</li>
+                <li>cylc gui</li>
+                <li>cylc scan -c</li>
+                <li>gcylc</li>
+
+                </ul>
+                </br>
+                </br>
                 <h2>Glossary list of FCM commands</h2>
-                <br>
+                </br>
                 <strong>To find out more about each command use the help, for example:
                 <code>fcm &lt;COMMAND&gt; --help</code> </strong>
-                <br>
-                <br>
+                </br>
+                </br>
                 <ul>
                     <li>
                         fcm add
@@ -174,8 +226,8 @@
                 </ul>
             </div>
             <a href="https://github.com/metomi/fcm/blob/master/CHANGES.md">FCM change log</a>
-            <br>
-            <br>
+            </br>
+            </br>
             <div class="container">
             </div>
             <hr/>
