Spell checked and starting intermediate.

--- a/tutorial/bg_info/tutorial_julesrose/jr_beginner.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_beginner.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <meta name="description" content="JULES Rose Tutorial" />
+        <meta name="description" content="JULES-Rose Tutorial" />
         <meta name="author" content="JULES System Manager" />
         <link rel="icon" href="jules_logo.png" />
-        <title>JULES Rose beginner</title>
+        <title>JULES-Rose beginner</title>
         <!-- Bootstrap core CSS -->
         <link href="../etc/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
         <!-- Bootstrap theme -->
@@ -1272,7 +1272,7 @@ cylc-suite.db          share
 <li>What three ways can you find the job stderr for a task?</li>
 <font color=green>In the gcylc GUI by right clicking on the task, select View, select job stderr.
 In Rose Bush.
-In the cylc-run/log/job/1/ directory.</font>
+In the cylc-run/&lt;SUITE_NAME&gt;/log/job/1/&lt;TASK_NAME&gt;/NN  directory.</font>
 <li>In the gcylc GUI what does a <code>F</code> inside a
 coloured square mean?</li>
 <font color=green>It is a family of tasks.</font>
