--- a/tutorial/bg_info/tutorial_julesrose/jr_glossary.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_glossary.html
@@ -63,12 +63,13 @@
                 </br>
                 </br>
                 <ul>
-                <li>Ancillaries - datasets of fields at the resolution of the model, such as orography, soil mositure, etc.</li>
+                <li>Ancillaries - datasets of fields at the resolution of the model, such as orography, soil moisture, etc.</li>
                 <li>Benchmarking - A way of evaluating the and comparing changes.</li>
                 <li>Configuration - The scientific setting chosen for the model to use.</li>
                 <li>Driving Data - The data source that drives the model, for example: GSWP2 or Loobos or WFDTI or CHESS etc.</li>
                 <li>Evaluation Tools - These are the different tools that are used by the community to evaluate the model at a given version, configuration with defined ancils and driving data.</li>
-                <li>KGO - Known Good Output, this is complier specific, it is used in the rose stem testing to prove that changes are not breaking existing code or are only improving the output in an agreed acceptable way, i.e. it is intended.</li> 
+                <li>KGO - Known Good Output, this is complier specific, it is used in the rose stem testing to prove that changes are not breaking existing code or are only improving the output in an agreed acceptable way, i.e. it is intended.</li>
+                <li>Suite - A collection of tasks, either applications and/or commands, which are scheduled to run based on the dependencies between the tasks.</li> 
                 <li>Version - The code at a defined release date, i.e. vn4.7 was released 2016-10-29 at revision number 5320.</li>
 
                 
