--- a/tutorial/bg_info/tutorial_julesrose/jr_links.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_links.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <meta name="description" content="JULES Rose Tutorial">
+        <meta name="description" content="JULES-Rose Tutorial">
         <meta name="author" content="JULES System Manager">
         <link rel="icon" href="jules_logo.png">
         <title>JULES Links</title>
@@ -74,7 +74,7 @@
                 </br>
                 <a href="https://code.metoffice.gov.uk/trac/jules/wiki/JULESTipOfDay">JULES Tip Of the Day (JTOD)</a>
                 </br>
-                <a href="https://code.metoffice.gov.uk/trac/jules/query?status=approved&status=assigned&status=code_review&status=committed&status=in_progress&status=new&status=sci%2Ftech_review&milestone=JULES+v4.8+release&col=id&col=summary&col=status&col=type&col=priority&col=milestone&col=time&order=priority">Custom Query Milestone is JULES v4.8 release</a> change the Filters as appropraite.
+                <a href="https://code.metoffice.gov.uk/trac/jules/query?status=approved&status=assigned&status=code_review&status=committed&status=in_progress&status=new&status=sci%2Ftech_review&milestone=JULES+v4.8+release&col=id&col=summary&col=status&col=type&col=priority&col=milestone&col=time&order=priority">Custom Query Milestone is JULES v4.8 release</a> change the Filters as appropriate.
                 </br>
                 </br>
                 <h2>VM (JULES) Links</h2>
