--- a/tutorial/bg_info/tutorial_julesrose/jr_mqrg.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_mqrg.html
@@ -167,7 +167,7 @@ fcm st
 #  the experiment that was run
 fcm ci
 rose suite-run
-# more changes are needed but for tracebility create a branch
+# more changes are needed but for traceability create a branch
 fcm bc &lt;BRANCH_NAME&gt;
 # list all branches
 fcm bls
