--- a/tutorial/bg_info/tutorial_julesrose/jr_advanced.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_advanced.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <meta name="description" content="JULES Rose Tutorial" />
+        <meta name="description" content="JULES-Rose Tutorial" />
         <meta name="author" content="JULES System Manager" />
         <link rel="icon" href="jules_logo.png" />
-        <title>JULES Rose beginner</title>
+        <title>JULES-Rose advanced</title>
         <!-- Bootstrap core CSS -->
         <link href="../etc/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
         <!-- Bootstrap theme -->
